--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ charset-normalizer==2.0.4
 clang==5.0
 click==8.0.1
 Flask==2.0.1
-Flask==3.0.10
+flask-cors==3.0.10
 flatbuffers==1.12
 gast==0.4.0
 google-auth==1.35.0
